<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    tools:context=".ui.home.HomeFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_width="280dp"
        android:layout_gravity="center_horizontal"
        android:background="#80B8B8B8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cocktail_input"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/cocktail"
            android:textColor="#ffffff"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:layout_marginTop="430dp"/>

    <Button
        android:id="@+id/discover"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="#d81b60"
        android:text="@string/discover"
        android:textColor="#FFFFFF" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>